@@ -1,3 +1,8 @@
+2008-05-14  Chia-I Wu  <olv@openmoko.com>
+
+	* src/e_mod_nav.c, src/e_nav_dbus.c, src/e_nav_dbus.h: Save snapshot
+	on shutdown.
+
 2008-04-28  Jeremy Chang  <jeremy@openmoko.com>
 
 	* src/e_ctrl.c,
